--- a/src/index.css
+++ b/src/index.css
@@ -41,12 +41,5 @@ body {
 }
 
 body {
-	background-image: url(./assets/blurry-gradient.png);
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-	-o-background-size: cover;
-	-moz-background-size: cover;
-	-webkit-background-size: cover;
 	color: #fff;
 }
